--- a/Meeting_Scheduler/Meeting_Scheduler/bin/Meeting_Scheduler.dll.config
+++ b/Meeting_Scheduler/Meeting_Scheduler/bin/Meeting_Scheduler.dll.config
@@ -58,7 +58,7 @@
     </providers>
   </entityFramework>
   <connectionStrings>
-    <add name="MeetingSchedulerModel1" connectionString="data source=(localdb)\MSSQLLocalDB;initial catalog=MeetingScheduler;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
+    <!--<add name="MeetingSchedulerModel1" connectionString="data source=(localdb)\MSSQLLocalDB;initial catalog=MeetingScheduler;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />-->
     <add name="EFModel" connectionString="data source=(localdb)\MSSQLLocalDB;initial catalog=MeetingScheduler;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
   </connectionStrings>
 <system.webServer>
