--- a/Meeting_Scheduler/Meeting_Scheduler/Meeting_Scheduler.csproj
+++ b/Meeting_Scheduler/Meeting_Scheduler/Meeting_Scheduler.csproj
@@ -174,6 +174,10 @@
     <Compile Include="Migrations\201504281555111_asd.Designer.cs">
       <DependentUpon>201504281555111_asd.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201505050921281_asd1.cs" />
+    <Compile Include="Migrations\201505050921281_asd1.Designer.cs">
+      <DependentUpon>201505050921281_asd1.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -238,6 +242,9 @@
   <ItemGroup>
     <EmbeddedResource Include="Migrations\201504281555111_asd.resx">
       <DependentUpon>201504281555111_asd.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201505050921281_asd1.resx">
+      <DependentUpon>201505050921281_asd1.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
